Update Home link to point to index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   
   <nav>
     <ul>
-      <li><a href="ShansBasement v3.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="blog.html">Blog</a></li>
       <li><a href="art.html">Basement</a></li>
       <li><a href="https://shansbasement.myshopify.com/" target="_blank">Store</a></li>
