--- a/contact.html
+++ b/contact.html
@@ -67,6 +67,22 @@
     </ul>
   </nav>
 
+<div class="caja">
+  <img src="pic of me.png" alt="Me">
+  <div class="art-text">
+    <h2>Shanice</h2>
+    <p>Hi, I'm Shanice, though most people know me as
+Shan or Edny. I'm a 21-year-old artist from Puerto
+Rico with a deep love for all things art. I create
+both digital and traditional pieces. Currently
+working on a comic. I really hope my art speaks to
+you in.</p>
+  </div>
+</div>
+
+
+
+
   <footer>
     <p>:)</p>
   </footer>
