--- a/art.html
+++ b/art.html
@@ -66,6 +66,19 @@
       <li><a href="contact.html">About Me</a></li>
     </ul>
   </nav>
+<section class="gallery-row">
+  <div class="caja">
+    <img src="arte.png" alt="Art piece 1"> 
+  </div>
+
+  <div class="caja">
+    <img src="sticker.jpeg" alt="Art piece 2">
+  </div>
+
+  <div class="caja">
+    <img src="arte3.png" alt="Art piece 3">
+  </div>
+</section>
 
   <footer>
     <p>:)</p>
