Fix typo in contact.html paragraph

--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@ Shan or Edny. I'm a 21-year-old artist from Puerto
 Rico with a deep love for all things art. I create
 both digital and traditional pieces. Currently
 working on a comic. I really hope my art speaks to
-you in.</p>
+you in some way. You can contact me via email or follow my instagram (@edny_endon)</p>
   </div>
 </div>
 
